criando arquivo css
movi o css que estava no arquivo index.html para o arquivo style.css

--- a/index.html
+++ b/index.html
@@ -3,38 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Casa Criativa</title>
-        <style>
-            body {
-                background: #e5e5e5;
-                color: #25282B;
-                text-align: center;
-            }
-
-            p{
-                font-size: 12px;
-            }
-            button {
-                border: none;
-                font-weight: bold;
-                background: none;
-                color: #ff5E84;
-            }
-            .fat {
-                color: white;
-                background: #ff5E84;
-            }
-            #footer{
-                text-align: left;
-            }
-
-            #footer a {
-                color: #25282B;
-                text-decoration: none;
-            }
-            .hide{
-                display: none;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
