criando arquivo js
criei o arquivo script.js e movi o codigo js do arquivo index.html para o arquivo scrits.js

--- a/index.html
+++ b/index.html
@@ -25,18 +25,6 @@
             Com ♥️  <a href="http://rocketseat.com.br">Rocketseat</a>
         </p>
 
-        <script>
-            document
-                .querySelector("button.fat")
-                .addEventListener("click", function (){
-                    document
-                        .querySelector("#footer")
-                        .classList
-                        .toggle("hide");
-                })
-                
-                ;
-
-        </script>
+        <script src="script.js"></script>
     </body>
 </html>
