--- a/index.html
+++ b/index.html
@@ -7,23 +7,71 @@
 
     </head>
     <body>
-        <img src="logo.png" alt="Imagem da logomarca">
-        <p>
-            Ficar em casa em períodos longos, não deve ser nada fácil.
-        </p>
-        <p>
-            Iremos catalogar ideias, brincadeiras, jogos, filmes, livros, cursos, dicas e tudo que for necessário para tornar esse momento mais interessante.
-        </p>
-        <p>
-            Comece clicando em ver ideias para ver as  ideias cadastradas e contribua adicioando a sua ideia.
-        </p>
-
-        <button>+ Adicionar Ideia</button>
-        <button class="fat">Ver Ideias</button>
+        <div id="container">
+            <section id="intro">
+                <head>
+                    <img src="logo.png" alt="Imagem da logomarca">
+                </head>
+                <main>
+                    <p>
+                        Ficar em casa em períodos longos, não deve ser nada fácil.
+                    </p>
+                    <p>
+                        Iremos catalogar ideias, brincadeiras, jogos, filmes, livros, cursos, dicas e tudo que for necessário para tornar esse momento mais interessante.
+                    </p>
+                    <p>
+                        Comece clicando em ver ideias para ver as  ideias cadastradas e contribua adicioando a sua ideia.
+                    </p>
+                </main>
+                <section id="button">
+                    <button>+ Adicionar Ideia</button>
+                    <button class="fat">Ver Ideias</button>
+                </section>
+                
+                <footer>
+                    Com ♥️  <a href="http://rocketseat.com.br">Rocketseat</a>
+                </footer>
+            </section>
+            <section id="last-ideas">
+                <div class="idea">
+                    <img src="https://image.flaticon.com/icons/svg/2729/2729068.svg" 
+                        alt="Imagem de curso de programação">
+                    <div class="content">
+                        <h3>Cursos de programação</h3>
+                        <p>Estudo</p>
+                        <div class="description">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, iste! Aliquid voluptas nam aspernatur corrupti repellendus enim autem optio, eos fugit quibusdam quod. Neque cumque repellendus veniam vitae, reprehenderit sint.
+                        </div>
+                        <a href="#">Ir para a ideia</a>
+                    </div>
+                </div>
+                <div class="idea">
+                    <img src="https://image.flaticon.com/icons/svg/2729/2729009.svg" 
+                        alt="Imagem de curso de culinária">
+                    <div class="content">
+                        <h3>Cursos de culinária</h3>
+                        <p>Estudo</p>
+                        <div class="description">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, iste! Aliquid voluptas nam aspernatur corrupti repellendus enim autem optio, eos fugit quibusdam quod. Neque cumque repellendus veniam vitae, reprehenderit sint.
+                        </div>
+                        <a href="#">Ir para a ideia</a>
+                    </div>
+                </div>
+                <div class="idea">
+                    <img src="https://image.flaticon.com/icons/svg/2729/2729069.svg" 
+                        alt="Imagem de Yoga">
+                    <div class="content">
+                        <h3>Praticar Yoga</h3>
+                        <p>Exercícios</p>
+                        <div class="description">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, iste! Aliquid voluptas nam aspernatur corrupti repellendus enim autem optio, eos fugit quibusdam quod. Neque cumque repellendus veniam vitae, reprehenderit sint.
+                        </div>
+                        <a href="#">Ir para a ideia</a>
+                    </div>
+                </div>
+            </section>
+        </div>
         
-        <p id="footer">
-            Com ♥️  <a href="http://rocketseat.com.br">Rocketseat</a>
-        </p>
 
         <script src="script.js"></script>
     </body>
