Alterei o css da classe intro
Fiz a estilização da classe intro alterando formato dos botões, cor e posicionamento dos elementos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         Comece clicando em ver ideias para ver as  ideias cadastradas e contribua adicioando a sua ideia.
                     </p>
                 </main>
-                <section id="button">
+                <section id="buttons">
                     <button>+ Adicionar Ideia</button>
                     <button class="fat">Ver Ideias</button>
                 </section>
