--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>Casa Criativa</title>
         <link rel="stylesheet" href="style.css">
-
+        <!-- Adicionando a fonte montserrat do google na minha página -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="container">
