--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </p>
                 </main>
                 <section id="buttons">
-                    <button>+ Adicionar Ideia</button>
+                    <button onclick="onOff()">+ Adicionar Ideia</button>
                     <button class="fat">Ver Ideias</button>
                 </section>
                 
@@ -74,7 +74,7 @@
         </div>
         
         <!-- Modal -->
-        <div id="modal">
+        <div id="modal" class="hide">
             <div class="content">
                 <h1>Nova Ideia</h1>
                 <form action="" method="post">
@@ -99,6 +99,7 @@
                         <label for="link">Link da ideia</label>
                         <input type="url" name="link">
                     </div>
+                    <a href="#" onclick="onOff()">Voltar</a>
                     <button>Salvar</button>
                 </form>
             </div>
